# If you create new headers/cpp files, add them to these list!
set(HEADER_FILES
	SrcMain.h
    FileReader.h
    DNATranslator.h
    NWPairwise.h
)

set(SOURCE_FILES
	SrcMain.cpp
    FileReader.cpp
    DNATranslator.cpp
    NWPairwise.cpp
)

# Don't change this
add_library(src ${SOURCE_FILES} ${HEADER_FILES})
